packages/next-swc/crates/core/tests/errors/next-font-loaders/arg-not-object/input.js
import { Inter, Sacramento } from '@next/font/google'
fn(10)
Inter(10)
const obj = {}
const s = Sacramento(obj)
